fix PIRATE-3940,  logo is not coorectly displayed on Firefox and IE, add a max-width to logo so it doesn't overlap the navigation

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -64,6 +64,7 @@ header.bk-header {
 .widget {
     &.logo {
         display: inline-block;
+        max-width: 100%;
         .clearfix;
         img {
             display: block;
